tests/backend/zero_alloc_checker/fail14.output
File "fail14.ml", line 6, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail14.foo (camlFail14.foo_HIDE_STAMP)
